Cleanup test bot